--- a/continuação flashcard/continuação flashcard/style.css
+++ b/continuação flashcard/continuação flashcard/style.css
@@ -1,5 +1,13 @@
+:root {
+    --texto-principal:rgb(121, 15, 124);
+    --texto-pergunta:rgb(12, 136, 238);
+    --texto-resposta: rgb(8, 105, 161); 
+}
+
 body {
-    background-color: bisque;
+    background: url('plano\ de\ fundo.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
     font-family: Bai Jamjuree;
 }
 
@@ -9,7 +17,7 @@ body {
 
 .cartao {
     margin: 1rem 1rem;
-    background-color: palevioletred;
+    border: 1px solid var(--texto-principal);
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
@@ -18,12 +26,13 @@ body {
 
 .cartao__conteudo {
     text-align: center;
-    background-color:lightpink;
+    border: 1px solid var(--texto-principal);
     height: 100%;
 }
 
 .cartao__conteudo h3 {
-background-color: palevioletred ;
+color: var(--texto-principal);
+border: 1px solid var(--texto-principal);
 text-align: left;
 padding: 0.5rem;
 position: absolute;
