--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
 
 #container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 2rem;
 }
 
 .cartao {
@@ -42,6 +45,7 @@ position: absolute;
 margin: 0.6rem;
 border-radius: 0.6rem;
 font-size: 1vw;
+backface-visibility: hidden;
 }
 
 .cartao__conteudo__pergunta {
@@ -60,6 +64,17 @@ font-weight: 600;
 transform: rotateY(180deg);
 }
 
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta {
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.cartao__conteudo__resposta {
+    transform: rotateY(180deg);
+}
 
 footer {
     background-color: black;
